# annotation-pipeline

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
data/: README.md
examples/: sample.json
scripts/: data.sh  example.sh  mlflow.sh  pipeline.sh
src/: description.py  detection.py  main.py  objects.py  utils.py  vlm.py  yolo.py
