[project]
name = "sber-annotations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "clip",
    "loguru>=0.7.3",
    "mlflow>=2.22.0",
    "opencv-python>=4.11.0.86",
    "pip>=25.1.1",
    "qwen-vl-utils>=0.0.11",
    "spacy>=3.8.4",
    "torchvision>=0.22.0",
    "transformers[torch]>=4.51.3",
    "ultralytics>=8.3.132",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
